--- a/apps/base/logging-loki/deploy/minio/init-job.yaml
+++ b/apps/base/logging-loki/deploy/minio/init-job.yaml
@@ -21,7 +21,7 @@ spec:
         fsGroupChangePolicy: OnRootMismatch
         seccompProfile:
           type: RuntimeDefault
-      
+
       volumes:
         - name: minio-configuration
           projected:
@@ -40,9 +40,9 @@ spec:
 
       initContainers:
         - name: wait-for-requirements
-          image: "registry.lan/loki-minio:RELEASE.2024-10-29T16-01-48Z"
+          image: "registry.lan/loki-minio:RELEASE.2025-03-12T18-04-18Z"
           imagePullPolicy: IfNotPresent
-          command: 
+          command:
             - "sh"
             - "-c"
             - |
@@ -68,9 +68,9 @@ spec:
                 - ALL
       containers:
         - name: minio-make-bucket
-          image: "registry.lan/loki-minio-mc:RELEASE.2024-10-29T15-34-59Z"
+          image: "registry.lan/loki-minio-mc:RELEASE.2025-03-12T17-29-24Z"
           imagePullPolicy: IfNotPresent
-          command: [ "/bin/sh", "/custom/initialize" ]
+          command: ["/bin/sh", "/custom/initialize"]
           securityContext:
             readOnlyRootFilesystem: true
             allowPrivilegeEscalation: false
@@ -101,9 +101,9 @@ spec:
               cpu: 200m
               memory: 128Mi
         - name: minio-make-user
-          image: "registry.lan/loki-minio-mc:RELEASE.2024-10-29T15-34-59Z"
+          image: "registry.lan/loki-minio-mc:RELEASE.2025-03-12T17-29-24Z"
           imagePullPolicy: IfNotPresent
-          command: [ "/bin/sh", "/custom/add-user" ]
+          command: ["/bin/sh", "/custom/add-user"]
           securityContext:
             readOnlyRootFilesystem: true
             allowPrivilegeEscalation: false
@@ -134,9 +134,9 @@ spec:
               cpu: 200m
               memory: 128Mi
         - name: minio-make-policy
-          image: "registry.lan/loki-minio-mc:RELEASE.2024-10-29T15-34-59Z"
+          image: "registry.lan/loki-minio-mc:RELEASE.2025-03-12T17-29-24Z"
           imagePullPolicy: IfNotPresent
-          command: [ "/bin/sh", "/custom/add-policy" ]
+          command: ["/bin/sh", "/custom/add-policy"]
           securityContext:
             readOnlyRootFilesystem: true
             allowPrivilegeEscalation: false
@@ -167,7 +167,7 @@ spec:
               cpu: 200m
               memory: 128Mi
         - name: minio-make-svcacct
-          image: "registry.lan/loki-minio-mc:RELEASE.2024-10-29T15-34-59Z"
+          image: "registry.lan/loki-minio-mc:RELEASE.2025-03-12T17-29-24Z"
           imagePullPolicy: IfNotPresent
           command: ["/bin/sh", "/custom/add-svcacct"]
           securityContext:
@@ -200,4 +200,4 @@ spec:
               cpu: 200m
               memory: 128Mi
       nodeSelector:
-        capability/general-purpose: 'yes'
+        capability/general-purpose: "yes"
