--- a/apps/base/monitoring-release-watcher/deploy/config/watchers/app-stream-jellyfin.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/config/watchers/app-stream-jellyfin.yaml
@@ -2,34 +2,36 @@ watchers:
   - type: docker_registry
     repo: registry-1.docker.io
     image: jellyfin/jellyfin
-    tag: 10.10.0
+    tag: 10.10.6
     includes:
       - ^[0-9]+\.[0-9]+\.[0-9]+$
     excludes:
       - ^10\.[0-9]\..*
+      - ^10\.10\.[0-5]$
   - name: Jellyfin inject conf
     type: docker_registry
     repo: registry-1.docker.io
     image: library/python
-    tag: 3.13.0-alpine3.20
+    tag: 3.13.2-alpine3.21
     includes:
       - 3\.[0-9]+\.[0-9]+-alpine[0-9]+\.[0-9][0-9]
     excludes:
       - .*alpine3\.1[0-9]
+      - .*alpine3\.20
       - ^3\.[0-9]\.
       - ^3\.1[0-2]\.
   - type: github_tag
     repo: jellyfin/jellyfin-plugin-anidb
-    tag: v9
+    tag: v10
   - type: github_tag
     repo: jellyfin/jellyfin-plugin-anilist
-    tag: v10
+    tag: v11
   - type: github_tag
     repo: jellyfin/jellyfin-plugin-anisearch
     tag: v5
   - type: github_tag
     repo: jellyfin/jellyfin-plugin-ldapauth
-    tag: v19
+    tag: v20
   - type: github_tag
     repo: jellyfin/jellyfin-plugin-tvdb
-    tag: v17
+    tag: v19
