--- a/apps/base/tool-homepage/deploy/kustomization.yaml
+++ b/apps/base/tool-homepage/deploy/kustomization.yaml
@@ -8,7 +8,7 @@ labels:
     pairs:
       app.kubernetes.io/name: homepage
       app.kubernetes.io/component: homepage
-      app.kubernetes.io/version: v0.9.11
+      app.kubernetes.io/version: v1.1.1
 
 generatorOptions:
  disableNameSuffixHash: true
@@ -17,6 +17,8 @@ secretGenerator:
 - name: homepage-config
   files:
   - secret/bookmarks.yaml
+  - secret/custom.css
+  - secret/custom.js
   - secret/docker.yaml
   - secret/kubernetes.yaml
   - secret/services.yaml
