Fix homepage service pod selectors

--- a/apps/base/dev-argo-workflows/deploy/argo-server-ingress.yaml
+++ b/apps/base/dev-argo-workflows/deploy/argo-server-ingress.yaml
@@ -12,7 +12,7 @@ metadata:
     gethomepage.dev/name: Argo Workflows
     gethomepage.dev/description: Open source container-native workflow engine for orchestrating parallel jobs on Kubernetes
     gethomepage.dev/icon: argo-cd
-    gethomepage.dev/pod-selector: "app.kubernetes.io/name: argo-workflows"
+    gethomepage.dev/pod-selector: "app.kubernetes.io/name=argo-workflows"
 spec:
   ingressClassName: nginx
   tls:
