--- a/apps/base/monitoring-release-watcher/deploy/config/watchers/app-tool-miniflux.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/config/watchers/app-tool-miniflux.yaml
@@ -3,50 +3,54 @@ watchers:
     type: docker_registry
     repo: ghcr.io
     image: miniflux/miniflux
-    tag: 2.2.2-distroless
+    tag: 2.2.6-distroless
     includes:
       - ^[0-9]+.[0-9]+.[0-9]+-distroless$
     excludes:
       - ^1\..*
       - ^2\.[0-1]\..*-distroless$
-      - ^2\.2\.[0-1]-distroless$
+      - ^2\.2\.[0-51]-distroless$
   - name: Miniflux PostgreSQL
     type: docker_registry
     repo: registry-1.docker.io
     image: library/postgres
-    tag: 15.8-alpine3.20
+    tag: 15.12-alpine3.21
     includes:
       - ^[0-9]+\.[0-9]+-alpine[0-9]+\.[0-9]+
       # TODO upgrade major version
       - ^15\.
     excludes:
       - .*-alpine3\.1[0-9]
-      - ^[0-9]\..*
-      - ^1[0-4]\..*
-      - ^15\.[0-6]\..*
+      - .*-alpine3\.2[0]
+      - ^[0-9]\.
+      - ^1[0-4]\.
+      - ^15\.[0-9]\.
+      - ^15\.1[0-1]\.
   - name: "Reminiflux Node"
     type: docker_registry
     repo: registry-1.docker.io
     image: library/node
-    tag: 23.1.0-alpine3.20
+    tag: 23.10.0-alpine3.21
     includes:
       - ^[0-9]+\.[0-9]+\.[0-9]+-alpine[0-9]+\.[0-9][0-9]
     excludes:
       - .*-alpine3.1[0-9]
+      - .*-alpine3.2[0]
       - 1[0-9]\..*
       - 2[0-2]\..*
-      - 23\.[0]\..*
+      - 23\.[0-9]\..*
   - name: "Reminiflux Nginx"
     type: docker_registry
     repo: registry-1.docker.io
     image: library/nginx
-    tag: 1.27.2-alpine3.20-slim
+    tag: 1.27.4-alpine3.21-slim
     includes:
       - ^[0-9]+\.[0-9]+\.[0-9]+-alpine[0-9]+\.[0-9][0-9]-slim
     excludes:
       - .*-alpine3.1[0-9]
+      - .*-alpine3.2[0]
       - .*-perl
       - 1\.[0-9]\..*
       - 1\.[0-1][0-9]\..*
       - 1\.2[0-6]\..*
-      - 1\.27\.[0-1]-
+      - 1\.27\.[0-3]-
