--- a/apps/base/dev-argo-cd/deploy/argocd-server-ingress-http.yaml
+++ b/apps/base/dev-argo-cd/deploy/argocd-server-ingress-http.yaml
@@ -11,7 +11,7 @@ metadata:
     gethomepage.dev/name: Argo CD
     gethomepage.dev/description: Declarative, GitOps continuous delivery tool for Kubernetes
     gethomepage.dev/icon: argo-cd
-    gethomepage.dev/pod-selector: "app.kubernetes.io/part-of=argocd"
+    gethomepage.dev/pod-selector: ""
 spec:
   ingressClassName: nginx
   tls:
