--- a/apps/base/monitoring-release-watcher/deploy/config/watchers/app-tool-paperless.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/config/watchers/app-tool-paperless.yaml
@@ -3,36 +3,40 @@ watchers:
     type: docker_registry
     repo: ghcr.io
     image: paperless-ngx/paperless-ngx
-    tag: 2.13.2
+    tag: 2.14.7
     includes:
       - ^[0-9]+\.[0-9]+\.[0-9]+
     excludes:
       - .*(beta|rc).*
       - ^[0-1]\..*
       - ^2\.[0-9]\..*
-      - ^2\.1[0-2]\..*
+      - ^2\.1[0-3]\..*
   - name: "Paperless Redis"
     type: docker_registry
     repo: registry-1.docker.io
     image: library/redis
-    tag: 7.4.0-alpine3.20
+    tag: 7.4.2-alpine3.21
     includes:
       - ^[0-9]+\.[0-9]+\.[0-9]+.*alpine[0-9]+\.[0-9][0-9]
     excludes:
       - .*alpine3\.1[0-9]
+      - .*alpine3\.2[0]
       - ^[0-6]\.
       - ^7\.[0-3]\.
+      - ^7\.4\.[0-1]\.
   - name: Paperless PostgreSQL
     type: docker_registry
     repo: registry-1.docker.io
     image: library/postgres
-    tag: 15.8-alpine3.20
+    tag: 15.12-alpine3.21
     includes:
       - ^[0-9]+\.[0-9]+-alpine[0-9]+\.[0-9]+
       # TODO upgrade major version
       - ^15\.
     excludes:
       - .*-alpine3\.1[0-9]
-      - ^[0-9]\..*
-      - ^1[0-4]\..*
-      - ^15\.[0-6]\..*
+      - .*-alpine3\.2[0]
+      - ^[0-9]\.
+      - ^1[0-4]\.
+      - ^15\.[0-9]\.
+      - ^15\.1[0-1]\.
