--- a/apps/base/monitoring-release-watcher/deploy/config/watchers/app-cluster-ingress-nginx.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/config/watchers/app-cluster-ingress-nginx.yaml
@@ -1,11 +1,11 @@
 watchers:
   - type: github_release
     repo: kubernetes/ingress-nginx
-    release: controller-v1.12.1
+    release: controller-v1.13.0
     includes:
       - controller-v?[0-9]+\.[0-9]+\.[0-9]+.*
     excludes:
       - controller-v?0\.[0-9]+\.[0-9]+.*
       - controller-v?1\.[0-9]\..*
-      - controller-v?1\.1[0-9]\..*
+      - controller-v?1\.[1-2][0-9]\..*
       - .*beta.*
