--- a/apps/base/dev-argo-cd/deploy/manifests/base/application-controller-deployment/argocd-application-controller-deployment.yaml
+++ b/apps/base/dev-argo-cd/deploy/manifests/base/application-controller-deployment/argocd-application-controller-deployment.yaml
@@ -85,6 +85,12 @@ spec:
               name: argocd-cmd-params-cm
               key: controller.log.level
               optional: true
+        - name: ARGOCD_LOG_FORMAT_TIMESTAMP
+          valueFrom:
+            configMapKeyRef:
+              name: argocd-cmd-params-cm
+              key: log.format.timestamp
+              optional: true
         - name: ARGOCD_APPLICATION_CONTROLLER_METRICS_CACHE_EXPIRATION
           valueFrom:
             configMapKeyRef:
@@ -114,6 +120,12 @@ spec:
             configMapKeyRef:
               name: argocd-cmd-params-cm
               key: controller.self.heal.backoff.cap.seconds
+              optional: true
+        - name: ARGOCD_APPLICATION_CONTROLLER_SELF_HEAL_BACKOFF_COOLDOWN_SECONDS
+          valueFrom:
+            configMapKeyRef:
+              name: argocd-cmd-params-cm
+              key: controller.self.heal.backoff.cooldown.seconds
               optional: true
         - name: ARGOCD_APPLICATION_CONTROLLER_SYNC_TIMEOUT
           valueFrom:
@@ -240,6 +252,12 @@ spec:
             configMapKeyRef:
               name: argocd-cmd-params-cm
               key: controller.cluster.cache.events.processing.interval
+              optional: true
+        - name: ARGOCD_APPLICATION_CONTROLLER_COMMIT_SERVER
+          valueFrom:
+            configMapKeyRef:
+              name: argocd-cmd-params-cm
+              key: commit.server
               optional: true
         image: quay.io/argoproj/argocd:latest
         imagePullPolicy: Always
