fix: Fix multus OOM

--- a/apps/base/cluster-multus/deploy/patches/multus-daemonset-thick-resources.yaml
+++ b/apps/base/cluster-multus/deploy/patches/multus-daemonset-thick-resources.yaml
@@ -9,10 +9,12 @@ spec:
       containers:
         - name: kube-multus
           # container gets OOMKilled with the default 50Mi memory
+          # See https://github.com/k8snetworkplumbingwg/multus-cni/issues/1346
+          # Workaround for now, increase memory
           resources:
             requests:
               cpu: "100m"
-              memory: "96Mi"
+              memory: "256Mi"
             limits:
               cpu: "100m"
-              memory: "96Mi"
+              memory: "256Mi"
