--- a/apps/base/monitoring-release-watcher/deploy/config/watchers/app-dev-argo-tasks.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/config/watchers/app-dev-argo-tasks.yaml
@@ -3,26 +3,26 @@ watchers:
     type: docker_registry
     repo: quay.io
     image: containers/buildah
-    tag: v1.39.2
+    tag: v1.40.1
     includes:
       - v[0-9]+\.[0-9]+\.[0-9]+
     excludes:
       - v0\.
       - v1\.[0-9]\.
-      - v1\.[0-2][0-9]\.
-      - v1\.3[0-8]\.
+      - v1\.[0-3][0-9]\.
   - name: "Source fetcher base image"
     type: docker_registry
     repo: registry-1.docker.io
     image: library/python
-    tag: 3.13.2-alpine3.21
+    tag: 3.13.5-alpine3.22
     includes:
       - 3\.[0-9]+\.[0-9]+-alpine[0-9]+\.[0-9][0-9]
     excludes:
       - .*alpine3\.1[0-9]
-      - .*alpine3\.20
+      - .*alpine3\.2[0-1]
       - ^3\.[0-9]\.
       - ^3\.1[0-2]\.
+      - ^3\.13\.[0-4]-
   - name: "Source fetcher pyyaml"
     type: pypi
     package: pyyaml
