--- a/apps/base/monitoring-release-watcher/deploy/config/watchers/app-download-deluge.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/config/watchers/app-download-deluge.yaml
@@ -3,16 +3,15 @@ watchers:
     type: docker_registry
     repo: registry-1.docker.io
     image: emmercm/libtorrent
-    tag: 1.2.14-alpine
+    tag: 2.0.11-alpine
     includes:
-      - 1\.[0-9]+\.[0-9]+-alpine
+      - ^[0-9]+\.[0-9]+\.[0-9]+-alpine
     excludes:
-      - ^1\.[0-1]\..*
-      - ^1\.2\.[0-9]-alpine
-      - ^1\.2\.1[0-3]-alpine
+      - ^1\.
+      - ^2\.0\.[0-9]-alpine
   - name: Deluge
     type: pypi
     package: deluge
-    version: 2.1.1
-    excludes: 
+    version: 2.2.0
+    excludes:
       - ^1\..*
