--- a/apps/base/monitoring-release-watcher/deploy/config/watchers/app-home-zigbee2mqtt.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/config/watchers/app-home-zigbee2mqtt.yaml
@@ -1,11 +1,10 @@
 watchers:
   - type: docker_registry
-    repo: registry-1.docker.io
+    repo: ghcr.io
     image: koenkk/zigbee2mqtt
-    tag: 2.1.3
+    tag: 2.5.1
     includes:
       - ^[0-9]+\.[0-9]+\.[0-9]+.*$
     excludes:
       - ^[0-1]\..*
-      - ^2\.[0]\..*
-      - ^2\.1\.[0-2]$
+      - ^2\.[0-4]\..*
