--- a/apps/base/monitoring-release-watcher/deploy/config/watchers/app-tool-nextcloud.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/config/watchers/app-tool-nextcloud.yaml
@@ -3,7 +3,7 @@ watchers:
     type: docker_registry
     repo: registry-1.docker.io
     image: library/nextcloud
-    tag: 31.0.2-apache
+    tag: 31.0.7-apache
     includes:
       - ^[0-9]+\.[0-9]+\.[0-9]+-apache
     excludes:
@@ -11,32 +11,32 @@ watchers:
       - ^1[0-9]\..*
       - ^2[0-9]\..*
       - ^3[0]\..*
-      - ^31\.0\.[0-1]-.*
+      - ^31\.0\.[0-6]-.*
   - name: Nextcloud supercronic
     type: github_release
     repo: aptible/supercronic
-    release: v0.2.33
+    release: v0.2.34
     excludes:
       - .*(alpha|beta|rc).*
       - ^v0\.[0-1]\.
   - name: Nextcloud Calendar
     type: github_release
     repo: nextcloud-releases/calendar
-    release: v5.2.0
+    release: v5.3.5
     excludes:
       - .*(alpha|beta|rc).*
       - ^v[0-4]\..*
   - name: Nextcloud Contacts
     type: github_release
     repo: nextcloud-releases/contacts
-    release: v7.0.4
+    release: v7.1.5
     excludes:
       - .*(alpha|beta|rc).*
       - ^v[0-5]\..*
   - name: Nextcloud Notes
     type: github_release
     repo: nextcloud/notes
-    release: v4.11.0
+    release: v4.12.2
     excludes:
       - .*(alpha|beta|rc).*
       - ^v[0-3]\..*
@@ -52,39 +52,37 @@ watchers:
     type: docker_registry
     repo: registry-1.docker.io
     image: library/mysql
-    tag: 9.2.0-oraclelinux9
+    tag: 9.3.0-oraclelinux9
     includes:
       - ^[0-9]\.[0-9]+\.[0-9]+-oraclelinux.+
     excludes:
       - .*rc.*
       - ^[0-8]\..*
-      - ^9\.[0-1]\..*
+      - ^9\.[0-2]\..*
   - name: "Nextcloud Redis"
     type: docker_registry
     repo: registry-1.docker.io
     image: library/redis
-    tag: 7.4.2-alpine3.21
+    tag: 8.0.3-alpine3.21
     includes:
       - ^[0-9]+\.[0-9]+\.[0-9]+.*alpine[0-9]+\.[0-9][0-9]
     excludes:
       - .*alpine3\.1[0-9]
       - .*alpine3\.2[0]
-      - ^[0-6]\.
-      - ^7\.[0-3]\.
-      - ^7\.4\.[0-1]\.
+      - ^[0-7]\.
   - name: "Caldav recurring task scheduler base image"
     type: docker_registry
     repo: registry-1.docker.io
     image: library/python
-    tag: 3.13.2-alpine3.21
+    tag: 3.13.5-alpine3.22
     includes:
-      - 3\.[0-9]+\.[0-9]+-alpine[0-9]+\.[0-9]+
+      - 3\.[0-9]+\.[0-9]+-alpine[0-9]+\.[0-9][0-9]
     excludes:
-      - .*-alpine3\.[0-9]$
-      - .*-alpine3\.1[0-9]
-      - .*alpine3\.20
-      - 3\.[0-9]\..*
-      - 3\.1[0-2]\..*
+      - .*alpine3\.1[0-9]
+      - .*alpine3\.2[0-1]
+      - ^3\.[0-9]\.
+      - ^3\.1[0-2]\.
+      - ^3\.13\.[0-4]-
   - name: Caldav recurring task scheduler
     type: github_commit
     repo: Neraud/caldav-recurring-task-scheduler
