--- a/apps/base/monitoring-release-watcher/deploy/config/watchers/app-tool-syncthing.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/config/watchers/app-tool-syncthing.yaml
@@ -3,33 +3,32 @@ watchers:
     type: docker_registry
     repo: registry-1.docker.io
     image: syncthing/syncthing
-    tag: 1.29.3
+    tag: 1.30.0
     includes:
       - ^[0-9]+\.[0-9]+\.[0-9]+
     excludes:
       - ^1\.[0-9]\.
-      - ^1\.1[0-9]\.
-      - ^1\.2[0-8]\.
+      - ^1\.[1-2][0-9]\.
   - name: Syncthing conf injection
     type: docker_registry
     repo: registry-1.docker.io
     image: library/python
-    tag: 3.13.2-alpine3.21
+    tag: 3.13.5-alpine3.22
     includes:
       - 3\.[0-9]+\.[0-9]+-alpine[0-9]+\.[0-9][0-9]
     excludes:
       - .*alpine3\.1[0-9]
-      - .*alpine3\.20
+      - .*alpine3\.2[0-1]
       - ^3\.[0-9]\.
       - ^3\.1[0-2]\.
+      - ^3\.13\.[0-4]-
   - name: Syncthing Discovery
     type: docker_registry
     repo: registry-1.docker.io
     image: syncthing/discosrv
-    tag: 1.29.3
+    tag: 1.30.0
     includes:
       - ^[0-9]+\.[0-9]+\.[0-9]+
     excludes:
       - ^1\.[0-9]\.
-      - ^1\.1[0-9]\.
-      - ^1\.2[0-8]\.
+      - ^1\.[1-2][0-9]\.
