--- a/apps/base/monitoring-release-watcher/deploy/config/watchers/app-stream-jellyfin.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/config/watchers/app-stream-jellyfin.yaml
@@ -1,25 +1,26 @@
 watchers:
   - type: docker_registry
-    repo: registry-1.docker.io
+    repo: ghcr.io
     image: jellyfin/jellyfin
-    tag: 10.10.6
+    tag: 10.10.7
     includes:
       - ^[0-9]+\.[0-9]+\.[0-9]+$
     excludes:
       - ^10\.[0-9]\..*
-      - ^10\.10\.[0-5]$
+      - ^10\.10\.[0-6]$
   - name: Jellyfin inject conf
     type: docker_registry
     repo: registry-1.docker.io
     image: library/python
-    tag: 3.13.2-alpine3.21
+    tag: 3.13.5-alpine3.22
     includes:
       - 3\.[0-9]+\.[0-9]+-alpine[0-9]+\.[0-9][0-9]
     excludes:
       - .*alpine3\.1[0-9]
-      - .*alpine3\.20
+      - .*alpine3\.2[0-1]
       - ^3\.[0-9]\.
       - ^3\.1[0-2]\.
+      - ^3\.13\.[0-4]-
   - type: github_tag
     repo: jellyfin/jellyfin-plugin-anidb
     tag: v10
